<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity">

    <Button
            android:text="@string/log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button5" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:onClick="logOut"/>
    <TextView
            android:layout_width="254dp"
            android:layout_height="79dp"
            android:text="Hello World!"
            android:id="@+id/textView"
            android:layout_weight="1" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/playerInput"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            android:layout_marginStart="8dp" android:textAlignment="center" android:textSize="30sp"
            android:gravity="center_vertical"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="307dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/playerInput"
            android:gravity="center"
            app:layout_constraintVertical_bias="0.819" android:id="@+id/linearLayout">
        <Button
                android:text="@string/single_player"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button"
                android:onClick="startSinglePlayer" android:layout_weight="1"/>
        <Button
                android:text="@string/rapid_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button2" android:onClick="startRapid"
                android:layout_weight="1"/>
        <Button
                android:text="@string/ranking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button4"
                android:onClick="showRecords" android:layout_weight="1"/>
        <Button
                android:text="@string/multiplayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/multiButton"
                android:onClick="startMultiplayer" android:layout_weight="1"/>
    </LinearLayout>
    <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/music" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:textOff="@string/off_music"
            android:textOn="@string/on_music" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"/>
    <Button
            android:text="@string/edit_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button6"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toStartOf="@+id/music"
            app:layout_constraintStart_toEndOf="@+id/button5"
            app:layout_constraintHorizontal_bias="0.0" android:onClick="edit"/>
    <Button
            android:text="@string/find"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:id="@+id/button7"
            app:layout_constraintTop_toBottomOf="@+id/music"
            android:layout_marginTop="32dp"
            app:layout_constraintStart_toEndOf="@+id/playerInput" android:layout_marginStart="8dp"
            android:onClick="findPlayer"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/playerInput"
            android:hint="@string/find_player"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button5" android:layout_marginTop="32dp"
            android:layout_marginStart="32dp" android:inputType="" />
</android.support.constraint.ConstraintLayout>